# los-scrapers

./: Gemfile  README.md
ifai/: README.md  beisbol.rb
script/: beisbol.rb
script/curul501/: congresistas-curul501.rb
script/ifai/: README.md  beisbol.rb
script/inegi/: .gitignore  AUTHORS  LICENSE  README.md  README.rst  estatal.sh  inegi-ng.py  inegi.cfg  inegi.sh  inegi_nosql.py  inegi_sql.py  nacional.sh  parse.py  requirements.txt  setup.cfg  setup.py
script/inegi/datos/19_NuevoLeon_tsv/: 19_NuevoLeon_Notas.tsv
script/inegi/inegi/: inegi_get_data.py
script/sep/: README.md  scrapsep.py
