[metadata]
name = inegi
version = 0.2.2
summary = Python library for accessing INEGI data
description-file =
    README.rst
author = Rafael Cardenas
author_email = rafael@rafaelcr.com
url = https://github.com/codeandomexico/los-scrapers
maintainer = Milton Mazzarri
maintainer_email = milmazz@gmail.com
license = AGPLv3
platforms =
    unix
    linux
    osx
    win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
keywords =
    inegi, opendata
[entry_points]
console_scripts =
    inegi_get_data = inegi.inegi_get_data:main
    inegi_nosql = inegi.inegi_nosql:main
    inegi_sql = inegi.inegi_sql:main
[files]
packages =
    inegi
package_data =
    inegi = inegi.cfg
extra_files =
    setup.py
    README.rst
    LICENSE
    requirements.txt
